--- a/views/index.haml
+++ b/views/index.haml
@@ -3,4 +3,7 @@
   %head
     %meta{:content => "text/html; charset=ISO-8859-1", "http-equiv" => "Content-Type"}
     %title LC Trails - Admin
-    %link{:href => "../css/reset.css", :media => "screen", :rel => "stylesheet"}
+    %link{:href => "css/style.css", :media => "screen", :rel => "stylesheet"}
+  %html
+    %h1
+      =Professor Bingo!
