--- a/views/index.haml
+++ b/views/index.haml
@@ -2,8 +2,8 @@
 %html{:lang => "en"}
   %head
     %meta{:content => "text/html; charset=ISO-8859-1", "http-equiv" => "Content-Type"}
-    %title LC Trails - Admin
+    %title Professor Bingo - Home
     %link{:href => "css/style.css", :media => "screen", :rel => "stylesheet"}
   %html
     %h1
-      =Professor Bingo!
+      ="Professor Bingo!"
