--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,5 @@
     %meta{:content => "text/html; charset=ISO-8859-1", "http-equiv" => "Content-Type"}
     %title Professor Bingo - Home
     %link{:href => "css/style.css", :media => "screen", :rel => "stylesheet"}
-  %html
-    %h1
-      ="Professor Bingo!"
+  %body
+    =haml :header
