Add Steps for Cuke Testing

--- a/views/header.haml
+++ b/views/header.haml
@@ -1,2 +1,7 @@
-%h1
-  ="Professor Bingo!"
+.header
+  .title
+    %h1
+      ="Professor Bingo!"
+  .login_info
+    %a{:title => "Register", :id => "Register", :href => "register/"} Register
+  
