--- a/views/header.haml
+++ b/views/header.haml
@@ -3,7 +3,12 @@
     %h1
       ="Professor Bingo!"
   .login_info
-    %a{:title => "Register", :id => "Register", :href => "register/"} Register
+    - if session[:user]
+      = "Welcome " + session[:user].email
+    - else
+      %a{:title => "Register", :id => "Register", :href => "/register/"} Register
+      %br
+      %a{:title => "Login", :id => "Login", :href => "/login/"} Login
   - if @message
     .message
       =@message
