Refactor Cucumber Tests, they're still bad right now...

--- a/views/header.haml
+++ b/views/header.haml
@@ -10,7 +10,8 @@
       %a{:title => "Register", :id => "Register", :href => "/register/"} Register
       %br
       %a{:title => "Login", :id => "Login", :href => "/login/"} Login
-  - if @message
+  - if session[:message]
     .message
-      =@message
+      =session[:message]
+      -session[:message] = nil
   
