Add Admin Control Panel

--- a/views/header.haml
+++ b/views/header.haml
@@ -6,6 +6,8 @@
     - if session[:user]
       = "Welcome " + session[:user].email
       %a{:title => "Logout", :id => "Logout", :href => "/logout/"} Logout
+      - if session[:user].permissions == "admin"
+        %a{:title => "Control Panel", :id => "ControlPanel", :href => "/controlpanel/"} Control Panel
     - else
       %a{:title => "Register", :id => "Register", :href => "/register/"} Register
       %br
