Add check for non-existent user

--- a/views/cpanel/addadmin.haml
+++ b/views/cpanel/addadmin.haml
@@ -7,7 +7,7 @@
     %ul
       %li
         %label{:for => "email"} Email Address:
-        %input{:type => "text", :name => "email"}
+        %input{:type => "text", :name => "email", :value => @user}
       
       %li
         %label{:for => "type"} Type 
