--- a/views/cpanel/edituser.haml
+++ b/views/cpanel/edituser.haml
@@ -1,7 +1,5 @@
 %h2
-  ="Make another user an Administrator"
-%h2
-  ="Change User's Permissions"
+  ="Change User Permissions"
 %form{:action => "", :method => "post"}
   %fieldset
     %ul
