--- a/views/controlpanel.haml
+++ b/views/controlpanel.haml
@@ -14,7 +14,7 @@
       %br
       %a{:title => "CPanelHome", :id => "ControlPanelHome", :href => "/controlpanel/"} Control Panel Home
       %br
-      %a{:title => "Edit User", :id => "ControlPanelEditUser", :href => "/controlpanel/edituser/"} Edit User
+      %a{:title => "Users", :id => "ControlPanelUsers", :href => "/controlpanel/users/"} Edit User
       %br
       %a{:title => "Schools", :id => "ControlPanelSchools", :href => "/controlpanel/schools/"} Schools
     .main
