--- a/views/cpanel/school/list.haml
+++ b/views/cpanel/school/list.haml
@@ -3,7 +3,7 @@
   - School.all.each do |school|
     %br
     - if(session[:user].superadmin?)
-      %a{:title => "Edit #{school.name}", :href => "/controlpanel/schools/edit/#{school.name}"} 
+      %a{:title => "Edit #{school.name}", :href => "/controlpanel/school/edit/#{CGI::escape(school.name)}"} 
         =school.name
     - else
       =school.name
