--- a/views/controlpanel.haml
+++ b/views/controlpanel.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=ISO-8859-1", "http-equiv" => "Content-Type"}
     %title Professor Bingo - Admin Control Panel
-    %link{:href => "css/style.css", :media => "screen", :rel => "stylesheet"}
+    %link{:href => "/css/style.css", :media => "screen", :rel => "stylesheet"}
   %body
     =haml :header
     .controlnav
