Add user searching

--- a/views/style/style.sass
+++ b/views/style/style.sass
@@ -2,5 +2,28 @@
 
 .controlnav
   float: left
+  background: #FFF
+  padding:
+    top: 35px
 
 .main
+  float: left
+  padding:
+    left: 30px
+    
+.login_info
+  float: right
+
+.clear_both
+  clear: both
+  border:
+    bottom: 1px solid #000
+  padding:
+    top: 10px
+  margin:
+    bottom: 10px
+
+.title
+  float: left
+  font:
+    size: 30px
