--- a/views/cpanel/user/edit.haml
+++ b/views/cpanel/user/edit.haml
@@ -1,4 +1,4 @@
-%h2
+%h3
   ="Edit User"
 %form{:action => "", :method => "post"}
   %fieldset
@@ -32,3 +32,8 @@
           %input{:type => "radio", :id => "standard", :name => "type", :value => "regular", :checked => perms == 'standard'} Standard
       %li
         %input{:type => "submit", :value => "Edit User"}
+  - if(!@users.nil?)
+    - @users.each do |user|
+      %a{:title => "#{user.email}", :href => "/controlpanel/user/edit/#{user.email}"}
+        =user.email
+      %br
