--- a/views/header.haml
+++ b/views/header.haml
@@ -1,7 +1,6 @@
 .header
   .title
-    %h1
-      %a{:title => "Professor Bingo", :id => "ProfBingo", :href => "/"} Professor Bingo!
+    %a{:title => "Professor Bingo", :id => "ProfBingo", :href => "/"} Professor Bingo!
   .login_info
     - if session[:user]
       = "Welcome " + session[:user].email
@@ -12,6 +11,8 @@
       %a{:title => "Register", :id => "Register", :href => "/register/"} Register
       %br
       %a{:title => "Login", :id => "Login", :href => "/login/"} Login
+  .clear_both
+    
   - if session[:message]
     .message
       =session[:message]
