Add other fields to user edit page

--- a/views/cpanel/user/edit.haml
+++ b/views/cpanel/user/edit.haml
@@ -12,8 +12,18 @@
         %input{:type => "submit", :value => "Find User"}
     - else
       %li
-        =@user.email
-        %input{:type => "hidden", :name => "email", :value => @user.email}
+        - if(session[:user].superadmin?)
+          %label{:for => "email"} Email Address:
+          %input{:type => "text", :name => "email", :value => @user.email}
+        - else
+          =@user.email
+          %input{:type => "hidden", :name => "email", :value => @user.email}
+      %li
+        %label{:for => "first_name"} First Name:
+        %input{:type => "text", :name => "first_name", :value => @user.first_name}
+      %li
+        %label{:for => "last_name"} Last Name:
+        %input{:type => "text", :name => "last_name", :value => @user.last_name}
       - perms = @user.get_permissions  
       - if(params[:user] != session[:user].email)
         %li
@@ -30,6 +40,12 @@
           %input{:type => "radio", :id => "mod", :name => "type", :value => "mod", :checked => perms == 'mod'} Moderator
           %br
           %input{:type => "radio", :id => "standard", :name => "type", :value => "regular", :checked => perms == 'standard'} Standard
+      %li
+        %label{:for => "valid"} User Is Valid: 
+        %input{:type => "checkbox", :id => "valid", :name => "valid", :checked => @user.valid}
+      %li
+        %label{:for => "resetpw"} Reset Password (DOES NOTHING RIGHT NOW): 
+        %input{:type => "checkbox", :id => "resetpw", :name => "resetpw"}
       %li
         %input{:type => "submit", :value => "Edit User"}
   - if(!@users.nil?)
