Add professor creation

--- a/views/professor/add.haml
+++ b/views/professor/add.haml
@@ -10,7 +10,7 @@
         %label{:for => "school"} Professor School:
         %input{:type => "text", :name => "school", :value => @school}
       %li
-        %label{:for => "category"} Professor Category:
-        %input{:type => "text", :name => "category", :value => @category}
+        %label{:for => "dept"} Professor Dept:
+        %input{:type => "text", :name => "dept", :value => @dept}
       %li
         %input{:type => "submit", :value => "Add New Professor"}
